--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,46 @@
-.carousel-container{
-    padding: 0 1.5rem;
+.carousel-container {
+  padding: 0 1.5rem;
 }
 
 .checkbox-custom {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 0.25rem;
-    border: 2px solid #d5d2d9;
-    background-color: white;
-    position: relative;
-    cursor: pointer;
-  }
-  
-  .checkbox-custom::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 1rem;
-    height: 1rem;
-    background-color: transparent;
-    border-radius: 0.15rem;
-    transform: translate(-50%, -50%);
-    transition: background-color 0.2s ease;
-  }
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0.25rem;
+  border: 2px solid #d5d2d9;
+  background-color: white;
+  position: relative;
+  cursor: pointer;
+}
 
-  /* Change to purple background when selected */
-  input[type="checkbox"]:checked + .checkbox-custom::after,
-  input[type="radio"]:checked + .checkbox-custom::after {
-    background-color: #9C81CC; /* Purple color */
-  }
+.checkbox-custom::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1rem;
+  height: 1rem;
+  background-color: transparent;
+  border-radius: 0.15rem;
+  transform: translate(-50%, -50%);
+  transition: background-color 0.2s ease;
+}
 
-  :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-dot .ant-steps-item-tail, :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-dot.ant-steps-small .ant-steps-item-tail {
-    top: 12.5px;
-    width: 100%;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-inline: 84px 0;
-    padding: 0;
+/* Change to purple background when selected */
+input[type="checkbox"]:checked+.checkbox-custom::after,
+input[type="radio"]:checked+.checkbox-custom::after {
+  background-color: #9C81CC;
+  /* Purple color */
+}
+
+:where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-dot .ant-steps-item-tail,
+:where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-dot.ant-steps-small .ant-steps-item-tail {
+  top: 12.5px;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-inline: 84px 0;
+  padding: 0;
 }
 
 :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-label-vertical .ant-steps-item-content {
@@ -53,7 +55,7 @@
   background-color: #9C81CC !important;
 }
 
-:where(.css-dev-only-do-not-override-5wsri9).ant-steps{
+:where(.css-dev-only-do-not-override-5wsri9).ant-steps {
   width: 60%;
   margin: auto;
 }
@@ -61,5 +63,32 @@
 @media screen and (max-width: 480px) {
   .checkbox-custom {
     width: 4rem;
+  }
+
+  :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-vertical {
+    flex-direction: row;
+  }
+
+  .ant-steps-item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  .ant-steps {
+    width: 250px;
+  }
+
+  :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-vertical>.ant-steps-item>.ant-steps-item-container>.ant-steps-item-tail::after {
+    width: 121px;
+    height: 2px;
+  }
+
+  :where(.css-dev-only-do-not-override-5wsri9).ant-steps.ant-steps-vertical.ant-steps-dot .ant-steps-item>.ant-steps-item-container>.ant-steps-item-tail {
+    top: 10px;
+    inset-inline-start: 60px;
+    margin: 0;
+    padding: 16px 0 8px;
   }
 }
